--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title></title>
 </head>
+<style type="text/css">
+	p{
+		font-size: 1.3em;
+	}
+</style>
 <body>
-	<h1>pasos</h1>
-	<p>git status</p>
-	<p>clone git://github.com/Developer-Abel/pasos.git</p>
-	<p>git add .</p>
-	<p>git commit -m "version 1"</p>
-	<p>git push https://github.com/Developer-Abel/pasos.git</p>
-	<p>git status</p>
+	<br>
+	<div class="container">
+		<h1>pasos para comenzar con github</h1>
+		<hr>
+		<p>git status</p>
+		<p>clone git://github.com/Developer-Abel/pasos.git</p>
+		<p>git add .</p>
+		<p>git commit -m "version 1"</p>
+		<p>git push https://github.com/Developer-Abel/pasos.git</p>
+		<p>git status</p>
+	</div>
 
 </body>
 </html>
